condensed to 517 batches